crates/pandalang/src/snapshots/pandalang__parser__tests__parses@let__int.panda.snap
---
source: crates/pandalang/src/parser.rs
expression: test(path)
input_file: crates/pandalang/src/snapshot_inputs/let/int.panda
---
Ok(
    Let(
        Let {
            name: "x",
            value: Int(
                Int {
                    n: 3,
                },
            ),
            body: Var(
                Var {
                    name: "x",
                },
            ),
        },
    ),
)
