crates/pandalang/src/snapshots/pandalang__parser__tests__parses@let__str.panda.snap
---
source: crates/pandalang/src/parser.rs
expression: test(path)
input_file: crates/pandalang/src/snapshot_inputs/let/str.panda
---
Ok(
    Let(
        Let {
            name: "x",
            value: Str(
                Str {
                    s: "foo",
                },
            ),
            body: Var(
                Var {
                    name: "x",
                },
            ),
        },
    ),
)
